--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,8 +1,9 @@
 :root{
      --color-primario: #0d1117;
-     --color-secundario: #45adc7;
-     --color-details: hsl(189, 100%, 50%);
+     --color-secundario:#f89b29;
+     --color-details: #ff0f7b;
      --color-body-ligth: rgb(240, 239, 239);
+     --color-gradient: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
 }
 
 
@@ -32,10 +33,6 @@ body{
     transition: .3s ease all;
 }
 
-body.light{
-  background: #f1f1f1;
-  color: #262626;
-}
 /*delete select number input*/ 
 
 input[type=number]::-webkit-inner-spin-button, 
@@ -59,7 +56,7 @@ body::-webkit-scrollbar{
 }
 
 body::-webkit-scrollbar-thumb{
-    background: var(--color-details);
+  background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
     border-radius: 5px;
 }
 
@@ -68,13 +65,13 @@ body::-webkit-scrollbar-thumb{
 .cursor-dot{
     width: 5px;
     height: 5px;
-    background-color: var(--color-details);
+    background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
 }
 
 .cursor-outline{
     width: 30px;
     height: 30px;
-    border: 1px solid var(--color-details); 
+    border: 1px solid  var(--color-details);
 }
 
 .cursor-dot,
@@ -95,7 +92,7 @@ body::-webkit-scrollbar-thumb{
   bottom: 100px;
   right: 20px;
   padding: 15px 20px;
-  background-color: var(--color-secundario);
+  background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
   color: white;
   border: 1px solid white;
   border-radius: 50%;
@@ -109,6 +106,8 @@ body::-webkit-scrollbar-thumb{
   transform: translateX(0);
 }
 
+/*header*/ 
+
 #header{
     position: fixed !important;
     width: 100%;
@@ -119,15 +118,11 @@ body::-webkit-scrollbar-thumb{
 
 #header.solid{
     background-color: #010409;
-    box-shadow: 0px 0px 5px rgb(0, 225, 255);
+    box-shadow: 0 0 0.3em #f89b29,0 0 0.6em #ff0f7b; 
 }
   
 #header.off{
     transform: translateY(-200px)
-}
-
-#fondo{
-  color: #f1f1f1;
 }
 
 /*navbar*/
@@ -151,7 +146,7 @@ body::-webkit-scrollbar-thumb{
 
 .nav-item a::after{
     content: "";
-    background-color:var(--color-details);
+    background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
     position: absolute;
     left: 0;
     top:80%;
@@ -160,9 +155,10 @@ body::-webkit-scrollbar-thumb{
     opacity: 0;
 }
 
+
 #a-contact::after{
   content: "";
-  background-color:var(--color-details);
+  background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
   position: absolute;
   left: 0;
   top:80%;
@@ -173,7 +169,7 @@ body::-webkit-scrollbar-thumb{
 
 .navbar-toggler {
     border:none;
-    background-color:var(--color-secundario);
+    background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
 }
 
 .navbar-toggler:focus {
@@ -195,7 +191,7 @@ body::-webkit-scrollbar-thumb{
   
 .offcanvas-title:hover,
 .nav-link:hover{
-    color:var(--color-secundario);
+    color:#f1f1f1 ;
 }
 
 .d-lg-none a{
@@ -204,52 +200,6 @@ body::-webkit-scrollbar-thumb{
   
 .d-lg-none a:hover{
     color: #ff0101;
-}
-
-
-.switch{
-  background: var(--color-primario);
-  border-radius: 1000px;
-  border-color: var(--color-details);
-  position: relative;
-  cursor: pointer;
-  display: flex;
-  outline: none;
-  margin-top: 10px;
-}
-
-.switch::after{
-  content: "";
-  display: block;
-  width: 30px;
-  height: 30px;
-  position: absolute;
-  background: #f1f1f1;
-  top: 0;
-  left: 0;
-  right: unset;
-  border-radius: 100px;
-  transition: .3s ease all;
-  box-shadow: 0 0 2px 2px rgb(0, 0, 0, .2);
-}
-
-.switch.active{
-  background: orange;
-  color: #000000;
-  border-color: var(--color-body-ligth);
-  &::after{
-    right: 0;
-    left: unset;
-  }
-}
-
-.switch span{
-  width: 30px;
-  height: 30px;
-  line-height: 30px;
-  display: block;
-  background: none;
-  color: #fff;
 }
 
 /*banner*/ 
@@ -306,8 +256,8 @@ body::-webkit-scrollbar-thumb{
 /*hablemos*/
   
 .hablemos hr{
-  width: 100%;
-  color: var(--color-details);
+  width: 40%;
+  color: var(--color-secundario);
 }
 
 
@@ -334,7 +284,7 @@ input{
 
 input:hover,
 textarea:hover {
-  border: 2px solid rgb(0, 114, 122);
+  border: 2px solid var(--color-secundario);
 }
 
 input:active,
@@ -344,12 +294,7 @@ textarea:active {
 
 input:focus,
 textarea:focus {
-  border: 2px solid rgb(0, 195, 209);
-}
-
-
-body.light input{
-  color: #000000;
+  border: 2px solid var(--color-secundario);
 }
 
 textarea{
@@ -367,9 +312,6 @@ textarea{
     transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
-body.light textarea{
-  color: #000000;
-}
   
 input, textarea {
   caret-color:var(--color-secundario);
@@ -380,7 +322,7 @@ form button,
   width: 150px;
   height: 60px;
   background: transparent;
-  border: 2px solid var(--color-details);
+  border: 1px solid var(--color-secundario);
   font-weight: bold;
   color: #ffffff;
   border-radius: 7px;
@@ -405,7 +347,7 @@ form button::before {
   position: absolute;
   width: 0;
   height: 100%;
-  background: var(--color-secundario);
+  background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
   top: 0;
   transform: skewX(35deg);
   transition: all 0.5s;
@@ -418,7 +360,7 @@ form button::before {
   position: absolute;
   width: 0;
   height: 100%;
-  background: var(--color-secundario);
+  background-image: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
   top: 0;
   transform: skewX(35deg);
   transition: all 0.5s;
@@ -448,7 +390,7 @@ form button:hover::before,
 }
 
 #linktree{
-  padding-top: 46px;
+  padding-top: 49px;
 }
 
 .linkt{
@@ -459,19 +401,12 @@ form button:hover::before,
   margin-bottom: 34px;
 }
 
-body.light .linkt{
-   color: #000000;
-}
 
 
 /*footer*/
 footer{
   color: #f1f1f1;
   box-shadow: 0px 0px 8px rgb(0, 0, 0);
-}
-
-body.light footer{
-  background-color: #0d1117;
 }
 
 .footer{
@@ -492,7 +427,7 @@ footer img{
 
 
 .link2 a:hover{
-  color:var(--color-secundario);
+  background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
 }
 
 .copyright{
@@ -509,14 +444,26 @@ h3{
     font-weight: 600;
 }
 
-h4, h5{
-    color: var(--color-secundario);
+h4, h5,
+.link2 a:hover{
+  display:inline-block;
+  background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+    
+
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
 
 hr{
     width: 50%;
-    color: var(--color-secundario);
-    opacity: 1;
+    color:  var(--color-secundario);
+    opacity: 0.6;
+}
+
+.intro hr,
+.meet hr,
+.plus hr{
+  margin-left: 25%;
 }
 
 footer hr{
@@ -530,6 +477,8 @@ button{
   transition: all 1.1s;
 }
 
+/*media*/ 
+
 @media (max-width:950px) {
   .cursor-dot,
   .cursor-outline{
@@ -538,7 +487,7 @@ button{
 
     .nav-item a::after{
       content: "";
-      background-color:var(--color-secundario);
+      background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
       position: absolute;
       left: 0;
       top:80%;
@@ -550,13 +499,14 @@ button{
     h3{
       font-size: 1.9em;
     }
+    
 
 }
 
 @media(max-width:768px){
     .nav-item a::after{
         content: "";
-        background-color:var(--color-secundario);
+        background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
         position: absolute;
         left: 0;
         top:80%;
@@ -576,9 +526,9 @@ button{
       padding-top: 10vh;
     }
 
+
     h3{
       font-size: 1.9em;
     }
-
   }
 
