add dicen / hiden

--- a/styles/dom-host.css
+++ b/styles/dom-host.css
@@ -100,6 +100,7 @@ cursor: pointer;
 transform: translateX(200px);
 transition: 0.5s;
 z-index: 999;
+box-shadow: 0 5px 10px rgb(0, 0, 0);
 }
 
 .btn-scrolltop-on {
