--- a/styles/blog.css
+++ b/styles/blog.css
@@ -100,6 +100,7 @@ body::-webkit-scrollbar-thumb{
  transform: translateX(200px);
  transition: 0.5s;
  z-index: 999;
+ box-shadow: 0 5px 10px rgb(0, 0, 0);
 }
 
 .btn-scrolltop-on {
@@ -282,6 +283,8 @@ body::-webkit-scrollbar-thumb{
    flex-shrink: 1;
    
 }
+
+
 
 .img{
    height: 160px;
