--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+
 :root{
      --color-primario: #0d1117;
      --color-secundario:#f89b29;
@@ -100,6 +101,7 @@ body::-webkit-scrollbar-thumb{
   transform: translateX(200px);
   transition: 0.5s;
   z-index: 999;
+  box-shadow: 0 5px 10px rgb(0, 0, 0);
 }
 
 .btn-scrolltop-on {
@@ -481,18 +483,51 @@ body::-webkit-scrollbar-thumb{
   justify-content: center;
 }
 
+/*porque bf?*/ 
+.wait .col-lg-3{
+  display: grid;
+  place-content: center;
+  padding: 10px;
+}
+
+.circle{
+  width: 200px;
+  height: 200px;
+  background-image: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  box-shadow: 0 5px 10px rgb(0, 0, 0);
+}
+
+.circle i{
+  font-weight: 700;
+  font-size: 6em;
+}
+
+.contenido{
+  text-align: center;
+  padding: 20px 0px;
+}
+
+
 /* works */ 
 
 
 .trabajos{
-  border-radius: 25px;
   padding: 25px;
-  box-shadow: 0px 0px 10px  rgba(0, 0, 0, 0.781);
 }
  
 .trabajos hr{
   width: 35%;
   color:  var(--color-secundario);
+}
+
+.work-galery{
+  display: flex;
+  justify-content: center;
 }
 
 .work-galery img {
@@ -509,6 +544,22 @@ body::-webkit-scrollbar-thumb{
 .work-galery img:hover{
   transform: scale(1.2);
 }
+
+
+.stars {
+  display: flex;
+  grid-gap: 0.125rem;
+  gap: 0.125rem;
+  color: rgb(238, 203, 8);
+  padding: 20px;
+}
+
+.star {
+  height: 1.25rem;
+  width: 1.25rem;
+}
+
+
 
 /*section blog*/
 
@@ -542,6 +593,7 @@ body::-webkit-scrollbar-thumb{
   position: relative;
   margin-bottom:20px;
   margin-top: 20px;
+  box-shadow: 0 5px 10px rgb(0, 0, 0);
 }
 
 .titlt{
@@ -627,33 +679,7 @@ body::-webkit-scrollbar-thumb{
   transform: translate(-50%, -50%) scale(2);
 }
 
-/*porque bf?*/ 
-.wait .col-lg-3{
-  display: grid;
-  place-content: center;
-  padding: 10px;
-}
 
-.circle{
-  width: 200px;
-  height: 200px;
-  background-image: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-}
-
-.circle i{
-  font-weight: 700;
-  font-size: 6em;
-}
-
-.contenido{
-  text-align: center;
-  padding: 20px 0px;
-}
 /*hablemos*/
   
 .hablemos hr{
@@ -863,7 +889,9 @@ hr{
 
 .intro hr,
 .meet hr,
-.plus hr{
+.plus hr,
+.dicen hr,
+#blog hr{
   margin-left: 25%;
 }
 
