--- a/styles/dom-host.css
+++ b/styles/dom-host.css
@@ -129,7 +129,7 @@ transform: translateX(0);
 /*navbar*/
 
 .logo{
-   width: 5em;
+   width: 3em;
 }
 
 .nav-link{
@@ -175,6 +175,11 @@ transform: translateX(0);
  
 .offcanvas-title{
    font-size: 1.2em;
+}
+
+.offcanvas-title img{
+  color: #f1f1f1;
+  width: 3em;
 }
  
 .offcanvas-title:hover,
