--- a/styles/blog.css
+++ b/styles/blog.css
@@ -132,7 +132,7 @@ body::-webkit-scrollbar-thumb{
 /*navbar*/
 
 .logo{
-   width: 5em;
+   width: 3em;
 }
 
 .nav-link{
@@ -190,6 +190,11 @@ body::-webkit-scrollbar-thumb{
  
 .offcanvas-title{
    font-size: 1.2em;
+}
+
+.offcanvas-title img{
+   color: #f1f1f1;
+   width: 3em;
 }
  
 .offcanvas-title:hover,
