--- a/styles/contact.css
+++ b/styles/contact.css
@@ -415,15 +415,16 @@ footer{
   box-shadow: 0px 0px 8px rgb(0, 0, 0);
 }
 
-.footer{
-  
-  padding: 0 50px;
-  display: flex;
-  justify-content: space-between;
+.foot{
+  text-align: center;
+}
+
+.foot{
+  align-items: center;
 }
 
 footer img{
-  width: 10em;
+  width: 6em;
 }
 
 .link2 a{
@@ -435,6 +436,8 @@ footer img{
 .link2 a:hover{
   background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
 }
+
+
 
 .copyright{
     display: flex;
