--- a/styles/about.css
+++ b/styles/about.css
@@ -211,18 +211,20 @@ body::-webkit-scrollbar-thumb{
 /*banner*/ 
 
 #bannertop {
-  min-height: 45.5vh;
+  min-height: 90vh;
   padding-top: 10vh;
     display: flex;
     align-items: center;
     text-align: center;
-    background-image: 
-    linear-gradient(rgba(0, 30, 37, 0.932), rgba(0, 61, 94, 0.87)),
-    url();
+    background-image: url(/assets/Blank.png);
+    background-repeat: no-repeat no-repeat;
+    background-size:contain;
+    background-position:right;
 }
 
 #bannertop img{
   max-width: 100%;
+  border-radius: 40%;
 }
 
 #bannertop h1{
@@ -331,7 +333,6 @@ body::-webkit-scrollbar-thumb{
 .intro{
   
     padding-bottom: 40px;
-    padding-top: 50px;
     text-align: center;
 }
 
@@ -371,34 +372,53 @@ body::-webkit-scrollbar-thumb{
   }
 
 
-  /* works */ 
+/* works */ 
 
 
 .trabajos{
-  border-radius: 25px;
-    padding: 25px;
-    box-shadow: 0px 0px 10px  rgba(0, 0, 0, 0.781);
-  }
+  padding: 25px;
+}
+ 
+.trabajos hr{
+  width: 35%;
+  color:  var(--color-secundario);
+}
+
+.work-galery{
+  display: flex;
+  justify-content: center;
+}
+
+.work-galery img {
+  width: 100%;
+  transition: 0.5s;
    
-  .trabajos hr{
-    width: 35%;
-    color: var(--color-secundario);
-  }
-  
-  .work-galery img {
-    width: 100%;
-    transition: 0.5s;
-     
-  }
-  
-  .work-galery a{
-    color: var(--color-details);
-  }
-  
-  
-  .work-galery img:hover{
-    transform: scale(1.2);
-  }
+}
+
+.work-galery a{
+  color: var(--color-details);
+}
+
+
+.work-galery img:hover{
+  transform: scale(1.2);
+}
+
+
+.stars {
+  display: flex;
+  grid-gap: 0.125rem;
+  gap: 0.125rem;
+  color: rgb(238, 203, 8);
+  padding: 20px;
+}
+
+.star {
+  height: 1.25rem;
+  width: 1.25rem;
+}
+
+
 /*hablemos*/
   
 .hablemos hr{
@@ -668,7 +688,7 @@ footer img{
       }
   
       #bannertop{
-        padding-top: 10vh;
+        padding-top: 20vh;
       }
 
   
