cambio de color

--- a/styles/about.css
+++ b/styles/about.css
@@ -645,7 +645,7 @@ footer img{
   
   /*media*/ 
   
-  @media (max-width:950px) {
+  @media (max-width:991px) {
     .cursor-dot,
     .cursor-outline{
         display: none;
@@ -657,7 +657,7 @@ footer img{
         position: absolute;
         left: 0;
         top:80%;
-        width: 15%;
+        width: 35%;
         height: 2px;
         opacity: 0;
       }
@@ -666,6 +666,16 @@ footer img{
         font-size: 1.9em;
       }
   
+      #a-nosotros::after{
+        content: "";
+          background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+          position: absolute;
+          left: 0;
+          top:80%;
+          width: 35%;
+          height: 2px;
+          opacity: 1;
+      }
   }
   
   @media(max-width:768px){
@@ -675,9 +685,20 @@ footer img{
           position: absolute;
           left: 0;
           top:80%;
-          width: 32%;
+          width: 35%;
           height: 2px;
           opacity: 0;
+      }
+
+      #a-nosotros::after{
+        content: "";
+          background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+          position: absolute;
+          left: 0;
+          top:80%;
+          width: 35%;
+          height: 2px;
+          opacity: 1;
       }
       .navbar-brand{
         padding-left: 0px;
