--- a/styles/contact.css
+++ b/styles/contact.css
@@ -211,7 +211,7 @@ body::-webkit-scrollbar-thumb{
 /*banner*/ 
 
 #bannertop {
-  min-height: 100vh;
+  min-height: 90vh;
   padding-top: 10vh;
     display: flex;
     align-items: center;
@@ -489,7 +489,7 @@ button{
 
 /*media*/ 
 
-@media (max-width:950px) {
+@media (max-width:991px) {
   .cursor-dot,
   .cursor-outline{
       display: none;
@@ -501,13 +501,24 @@ button{
       position: absolute;
       left: 0;
       top:80%;
-      width: 15%;
+      width: 35%;
       height: 2px;
       opacity: 0;
     }
 
     h3{
       font-size: 1.9em;
+    }
+
+    #a-contact::after{
+      content: "";
+      background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+      position: absolute;
+      left: 0;
+      top:80%;
+      width: 35%;
+      height: 2px;
+      opacity: 1;
     }
     
 
@@ -520,9 +531,20 @@ button{
         position: absolute;
         left: 0;
         top:80%;
-        width: 32%;
+        width: 35%;
         height: 2px;
         opacity: 0;
+    }
+
+    #a-contact::after{
+      content: "";
+      background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+      position: absolute;
+      left: 0;
+      top:80%;
+      width: 35%;
+      height: 2px;
+      opacity: 1;
     }
     .navbar-brand{
       padding-left: 0px;
