--- a/styles/blog.css
+++ b/styles/blog.css
@@ -267,101 +267,51 @@ background-size: cover;
 .articulos .col-lg-3{
    display: flex;
    justify-content: center;
+   margin-bottom: 10px;
    
 }
 
-.carta{
-   color: #262626;
-   
-   width: 90%;
-   max-width: 300px;
-   background-color: var(--color-body-ligth);
-   margin:5%;
-   padding: 5px;
-   border-radius: 7px;
-   box-shadow: 0px 0px 8px rgb(0, 0, 0);
-   display: flex;
-   flex-direction: column; 
-}
+ 
 
-.content{
-   flex-grow: 1;
-   flex-shrink: 1;
-   
-}
+/*carta 2*/
 
+.card {
+   padding: 20px;
+   max-width: 350px;
+   border-radius: 20px;
+   background: linear-gradient(-45deg, #f89b297e 0%, #ff0f7b7a 100% );
+   transition: 0.4s;
+   color: #f1f1f1;
 
-
-.img{
-   height: 160px;
-}
-
-.carta img{
+ }
+ 
+ .card:hover {
+   translate: 0 -10px;
+ }
+ 
+ .card-title {
+   font-size: 18px;
+   font-weight: 600;
+   margin: 15px 0 0 10px;
+ }
+ 
+ .card-image img{
    width: 100%;
-   height: 100%;
-   
-}
-
-.carta .a{
-   z-index: 0;
-   
-}
-
-.carta button {
-   padding: 10px ;
-   width: 100%;
-   background: transparent;
-   background-color: #FBFBFB24;
-   border: 2px solid var(--color-details);
-   font-size: 15px;
-   font-weight: bold;
-   border-radius: 6px;
-   cursor: pointer;
-   position: relative;
-   display: flex;
-   overflow: hidden;
-   transition: all 0.5s;
-   text-transform: uppercase;
-   justify-content: center;
-   
+   border-radius: 15px;
  }
  
- .carta button span {
-   transition: all 0.5s;
-   z-index: -2;
+ .card-body {
+   margin: 13px 0 0 10px;
  }
  
- .carta button::after,
- .carta button::before {
-   content: "";
-   position: absolute;
-   width: 0;
-   height: 100%;
-   background: var(--color-secundario);
-   top: 0;
-   transform: skewX(35deg);
-   transition: all 0.5s;
-   z-index: -2;
+ .card-footer {
+   float: left;
+   margin: 28px 0 0 18px;
  }
  
- .carta button::after {
-   left: -20px;
+ .by-name {
+   font-weight: 700;
  }
- 
- .carta button::before {
-   right: -20px;
- }
- 
- .carta button:hover::after {
-   width: 50%;
-   left: 0;
- }
- 
- .carta button:hover::before {
-   width: 50%;
-   right: 0;
- }
- 
 
 
 
@@ -411,7 +361,6 @@ footer{
       font-weight: 600 ;
   }
   
-  h4, h5, 
   .link2 a:hover{
       display:inline-block;
     background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
