--- a/styles/blog.css
+++ b/styles/blog.css
@@ -340,7 +340,16 @@ footer{
  }
  
  
-  
+.queres{
+   box-shadow: 0 5px 10px rgb(0, 0, 0);
+   border-radius: 14px;
+   width: 90%;
+   margin: auto;
+}
+
+.queres p{
+   padding: 8px;
+}
 
   
   .copyright{
