--- a/styles/about.css
+++ b/styles/about.css
@@ -185,17 +185,13 @@ body::-webkit-scrollbar-thumb{
 .offcanvas{
     background-color: var(--color-primario);
 }
-  
-.offcanvas-title{
-    font-size: 1.2em;
-}
+
 
 .offcanvas-title img{
   color: #f1f1f1;
   width: 3em;
 }
 
-.offcanvas-title:hover,
 .nav-link:hover{
     color:#f1f1f1;
 }
@@ -204,8 +200,20 @@ body::-webkit-scrollbar-thumb{
   color: #f1f1f1;
 }
   
-.d-lg-none a:hover{
-    color: #ff0101;
+.in :hover{
+  color: #2f5ec5;
+}
+
+.facebook :hover{
+  color: #3b5998;
+}
+
+.wpp :hover{
+  color:#25D366;
+}
+
+.inst :hover{
+  color:rgb(255, 0, 200)
 }
 
 /*banner*/ 
